--- a/main.tex
+++ b/main.tex
@@ -490,6 +490,31 @@ description={Data Master},type=abbreslist
 name={ESR},
 description={Experimental Storage Ring},type=abbreslist
 }
+\newglossaryentry{UNILAC}{
+name={UNILAC},
+description={Universal Linear Accelerator},type=abbreslist
+}
+\newglossaryentry{FRS}{
+name={FRS},
+description={Fragment Seperator},type=abbreslist
+}
+\newglossaryentry{PBHV}{
+name={PBHV},
+description={Primary Beam High Voltage},type=abbreslist
+}
+\newglossaryentry{PBRF}{
+name={PBRF},
+description={Primary Beam Radio Frequency},type=abbreslist
+}
+
+\newglossaryentry{SBES}{
+name={SBES},
+description={Experimentierspeicherring ESR},type=abbreslist
+}
+\newglossaryentry{SHE-P}{
+name={SHE-P},
+description={SHE-Physik},type=abbreslist
+}
 \newglossaryentry{FAIR}{
 name={FAIR},
 description={Facility for Antiproton and Ion Research},type=abbreslist
@@ -528,11 +553,12 @@ name={MPS},
 description={Machine Protection System},type=abbreslist
 }
 \newglossaryentry{NESR}{
-name={ESR},
+name={NESR},
 description={New Experimental Storage Ring},type=abbreslist
 }
 
-\newglossaryentry{RESR}{name={RESR},
+\newglossaryentry{RESR}{
+name={RESR},
 description={Recycled Experimental Storage Ring},type=abbreslist
 }
 \newglossaryentry{RF}{name={RF},
@@ -614,12 +640,27 @@ description={Group ID},type=abbreslist
 name={BPID},
 description={Beam Process ID},type=abbreslist
 }
-
+\newglossaryentry{FBAS}{
+name={FBAS},
+description={Fast Beam Abort System},type=abbreslist
+}
+\newglossaryentry{CERN}{
+name={CERN},
+description={European Organization for Nuclear Research},type=abbreslist
+}
 \newglossaryentry{IP}{
 name={IP},
 description={Internet Protocol},type=abbreslist
 }
+\newglossaryentry{DDS}{
+name={DDS},
+description={Direct Digital Synthesizer},type=abbreslist
+}
 
+\newglossaryentry{GUI}{
+name={GUI},
+description={Graphical  User Interface},type=abbreslist
+}
 
 %Befehle für Glossary
 
@@ -727,6 +768,14 @@ description={Collection the predicted phase of the target synchrotron and transf
 \newglossaryentry{glos:machine_cycle}{
 name={machine cycle},
 description={One complete operation cycle of a machine, i.e. injection, ramp up, flattop, ejection and ramp down}
+}
+\newglossaryentry{glos:batch}{
+name={batch},
+description={SIS100 batch: Train of 4 $\times$ 2 $U^{28+}$ bunches injected into SIS100 in one SIS18 to SIS100 super cycle. Or train of 4 $\times$ 1 $H^{+}$ bunches injected into SIS100 in one SIS18 to SIS100 super cycle}
+}
+\newglossaryentry{glos:bunch_gap}{
+name={bunch gap},
+description={Area without any bunches in the bunch train that fits the time required for building up the nominal field of the kicker}
 }
 
 \lstset{tabsize=4, %
