--- a/reference.bib
+++ b/reference.bib
@@ -1,5 +1,4 @@
-\begin{filecontents}{reference.bib}
-{
+
 @book{wiedemann_particle_2015,
 	title = {Particle {Accelerator} {Physics}},
 	isbn = {978-3-319-18317-6},
@@ -33,7 +32,7 @@
 @misc{_fair_2011,
 	title = {{FAIR} - {Facility} for {Antiproton} and {Ion} {Research}},
 	url = {https://www.gsi.de//forschungbeschleuniger/fair.htm},
-	abstract = {FAIR – das zukünftige Beschleunigerzentrum In den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neFAIR wird Teilchenstrahlen mit bisher unerreichter Intensität und Qualität liefern. Ihr Herzstück ist ein Ringbeschleuniger mit einem Umfang von 1100 Metern. An diesen schließt sich ein komplexes System von Speicherringen und Experimentierstationen an. Die bereits existierenden GSI-Beschleuniger die},
+	abstract = {FAIR – das zukünftige Beschleunigerzentrum In den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neFAIR wird Teilchenstrahlen mit bisher unerreichter Intensität und Qualität liefern. Ihr Herzstück ist ein Ringbeschleuniger mit einem Umfang von 1100 Metern. An diesen schließt sich ein komplexes System von Speicherringen und Experimentierstationen an. Die bereits existierenden GSI-Beschleuniger die},
 	urldate = {2016-09-20},
 	journal = {GSI},
 	month = may,
@@ -44,12 +43,50 @@
 @misc{_gsi_2011,
 	title = {{GSI} {Helmholtzzentrum} für {Schwerionenforschung} {GmbH}},
 	url = {https://www.gsi.de//start/aktuelles.htm},
-	abstract = {GSI Helmholtzzentrum für Schwerionenforschung Das GSI Helmholtzzentrum für Schwerionenforschung in Darmstadt betreibt eine große, weltweit einmalige Beschleunigeranlage für Ionen. Forscherinnen und Forscher aus aller Welt nutzen die Anlage für Experimente, um neue Erkenntnisse über den Aufbau dIn den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neue Einblicke in den Aufbau der Materie und die EBei GSI wurde eine bahnbrechende neue Krebstherapie entwickelt. Grundlage hierfür waren langjährige Forschungsarbeiten und die große Beschleunigeranlage für Ionenstrahlen von GSI. Der Vorteil der neuen Therapie liegt darin, dass der Ionenstrahl seine größte Wirkung im Tumor erzielt und das umliegendChemische Elemente entstehen in Sternen und in Sternexplosionen. Sie sind der Stoff, aus dem die gesamte Materie - auch jedes Atom unseres Körpers - aufgebaut ist. Im Universum existiert noch eine Vielzahl von Atomen, die auf der Erde nicht vorkommen. Die Forscher bei GSI versuchen neue, bisher unbe},
+	abstract = {GSI Helmholtzzentrum für Schwerionenforschung Das GSI Helmholtzzentrum für Schwerionenforschung in Darmstadt betreibt eine große, weltweit einmalige Beschleunigeranlage für Ionen. Forscherinnen und Forscher aus aller Welt nutzen die Anlage für Experimente, um neue Erkenntnisse über den Aufbau dIn den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neue Einblicke in den Aufbau der Materie und die EBei GSI wurde eine bahnbrechende neue Krebstherapie entwickelt. Grundlage hierfür waren langjährige Forschungsarbeiten und die große Beschleunigeranlage für Ionenstrahlen von GSI. Der Vorteil der neuen Therapie liegt darin, dass der Ionenstrahl seine größte Wirkung im Tumor erzielt und das umliegendChemische Elemente entstehen in Sternen und in Sternexplosionen. Sie sind der Stoff, aus dem die gesamte Materie - auch jedes Atom unseres Körpers - aufgebaut ist. Im Universum existiert noch eine Vielzahl von Atomen, die auf der Erde nicht vorkommen. Die Forscher bei GSI versuchen neue, bisher unbe},
 	urldate = {2016-09-20},
 	journal = {GSI},
 	month = jun,
 	year = {2011},
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\5JXSJ7I6\\aktuelles.html:text/html}
+}
+
+@article{spiller_fair_2006,
+	title = {The {FAIR} accelerator project at {GSI}},
+	volume = {561},
+	url = {http://www.sciencedirect.com/science/article/pii/S0168900206000507},
+	number = {2},
+	urldate = {2016-09-26},
+	journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+	author = {Spiller, P. and Franchetti, G.},
+	year = {2006},
+	pages = {305--309},
+	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\KSFG4W7R\\S0168900206000507.html:text/html}
+}
+
+@misc{bai_concept_2016,
+	title = {Concept of the {FAIR} {Bunch} {To} {Bucket} {Transfer} {System}},
+	publisher = {GSI Concept Specification F-TC-C-05},
+	author = {Bai, Jiaoni and Ferrand, Thibault},
+	year = {2016}
+}
+
+@misc{beck_general_????,
+	title = {The {General} {Machine} {Timing} {System} for {FAIR} and {GSI}},
+	url = {https://www-acc.gsi.de/wiki/pub/Timing/TimingSystemDocuments/GMT_Description_v3-1.pdf},
+	urldate = {2016-09-26},
+	publisher = {GSI - Timing},
+	author = {Beck, Dietrich and Kreider, Mathias and Prados, Cesar and Terpstra, Wesley and Rauch, Stefan and Zweig, Marcus},
+	file = {GMT_Description_v3-1 - GMT_Description_v3-1.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\ZASQAR8R\\GMT_Description_v3-1.html:text/html}
+}
+
+@techreport{ferrand_synchronization_2015,
+	title = {Synchronization of {Synchrotrons} for bunch-to-bucket {Transfers}},
+	url = {http://cds.cern.ch/record/2053285},
+	urldate = {2016-09-26},
+	author = {Ferrand, Thibault and Klingbeil, Harald and Damerau, Heiko},
+	year = {2015},
+	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\98CBNIEF\\2053285.html:text/html}
 }
 
 @book{lee_accelerator_2011,
@@ -76,7 +113,45 @@
 	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\VBW3QNJJ\\Ezura et al. - 2008 - Beam-Dynamics View of RF Phase Adjustment for Sync.pdf:application/pdf}
 }
 
-@article{spiller_fair_2006,
+@misc{barletta_overview_????,
+	title = {Overview on {Magnetic} fields},
+	url = {http://uspas.fnal.gov/materials/12MSU/xverse_dynamics.pdf},
+	urldate = {2016-09-26},
+	author = {Barletta, Harms},
+	file = {[PDF] fnal.gov:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\UPDIHEVJ\\notes Barletta and Spentzouris - 1 Overview on Magnetic fields.pdf:application/pdf}
+}
+
+@techreport{bovet_selection_1970,
+	title = {A selection of formulae and data useful for the design of {AG} synchrotrons},
+	url = {http://cds.cern.ch/record/280305},
+	urldate = {2016-09-26},
+	institution = {CERN},
+	author = {Bovet, Claude and Gouiran, Robert and Reich, Karl Helmut and Gumowski, Igor},
+	year = {1970},
+	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\DGHSRW6X\\Bovet et al. - 1970 - A selection of formulae and data useful for the de.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\RNE8AERM\\280305.html:text/html}
+}
+
+@misc{forck_lecture_2011,
+	title = {Lecture {Notes} on {Beam} {Instrumentation} and {Diagnostics}},
+	url = {https://scholar.google.de/scholar?q=Lecture+Notes+on+Beam+Instrumentation+and+Diagnostics&btnG=&hl=de&as_sdt=0%2C5},
+	urldate = {2016-09-26},
+	publisher = {Joint University Accelerator School},
+	author = {Forck, Peter},
+	year = {2011},
+	file = {Lecture Notes on Beam Instrumentation and Diagnostics - Google Scholar:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\KTVIC9DC\\scholar.html:text/html}
+}
+
+@article{holzer_introduction_2013,
+	title = {Introduction to transverse beam dynamics},
+	url = {http://arxiv.org/abs/1404.0923},
+	urldate = {2016-09-26},
+	journal = {CERN Yellow Report},
+	author = {Holzer, B. J.},
+	year = {2013},
+	file = {[PDF] arxiv.org:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\DMNWKFA9\\Holzer - 2014 - Introduction to transverse beam dynamics.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\ZWPIH59A\\1404.html:text/html}
+}
+
+@article{spiller_fair_2006-1,
 	title = {The {FAIR} accelerator project at {GSI}},
 	volume = {561},
 	url = {http://www.sciencedirect.com/science/article/pii/S0168900206000507},
@@ -95,6 +170,19 @@
 	author = {Kester, O. and Barth, W. and Dolinskyy, O. and Hagenbuck, F. and Knie, K. and Reich-Sprenger, H. and Simon, H. and Spiller, P. J. and Weinrich, U. and Winkler, M. and {others}},
 	year = {2014},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\B79WDNFJ\\Kester et al. - 2014 - Status of the FAIR accelerator facility.pdf:application/pdf}
+}
+
+@article{eschke_international_2005,
+	title = {International {Facility} for {Antiproton} and {Ion} {Research} ({FAIR}) at {GSI}, {Darmstadt}},
+	volume = {31},
+	url = {http://iopscience.iop.org/article/10.1088/0954-3899/31/6/041/meta},
+	number = {6},
+	urldate = {2016-09-26},
+	journal = {Journal of Physics G: Nuclear and Particle Physics},
+	author = {Eschke, Jürgen},
+	year = {2005},
+	pages = {S967},
+	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\K9VT3T4D\\meta.html:text/html}
 }
 
 @article{beck_new_2012,
@@ -117,11 +205,61 @@
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\5XXC5KX9\\Hoffmann - 2008 - FESA–The front-End Software architecture at FAIR.pdf:application/pdf}
 }
 
-@misc{_fair_????,
+@misc{mandakovic_fair_????,
 	title = {{FAIR} {Fast} {Beam} {Abort} {System}},
 	url = {https://fair-wiki.gsi.de/foswiki/pub/FC2WG/FairC2WGMinutes/20151021_Fast_Beam_Abort_System_Mandakovic.pdf},
 	urldate = {2016-09-21},
+	publisher = {GSI},
+	author = {Mandakovic, Marko},
 	file = {Fast Beam Abort System @ FAIR - 20151021_Fast_Beam_Abort_System_Mandakovic.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\FG2FZPNT\\20151021_Fast_Beam_Abort_System_Mandakovic.html:text/html}
+}
+
+@article{bohne_technical_2008,
+	title = {Technical {Design} {Report} {FAIR} {SIS}100 {Synchrotron}},
+	url = {http://inspirehep.net/record/242805/files/HEACC86_I_206-210.pdf},
+	urldate = {2016-09-02},
+	journal = {GSI},
+	author = {Böhne, D. and Prange, H. and Blasche, K. and Franzke, B. and Spiller, P and {others}},
+	year = {2008},
+	file = {[PDF] inspirehep.net:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\K7ETQ2W4\\Böhne et al. - 1986 - Status report on the SISESR project at GSI.pdf:application/pdf}
+}
+
+@misc{udo_injection_2014,
+	title = {Injection and {Extraction} {Components} of {SIS} 100 / 300},
+	publisher = {GSI internal document},
+	author = {Udo, Blell},
+	year = {2014}
+}
+
+@inproceedings{huhmann_fair_2013,
+	title = {The {FAIR} control system–{System} architecture and first implementations},
+	url = {http://epaper.kek.jp/ICALEPCS2013/papers/moppc097.pdf},
+	urldate = {2016-09-26},
+	publisher = {ICALEPCS},
+	author = {Huhmann, Ralf and Bär, Ralph C. and Beck, Dietrich Hans and Fitzek, Jutta and Fröhlich, Günther and Hechler, Ludwig and Krause, Udo and Thieme, Matthias},
+	year = {2013},
+	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\2WD6NARU\\Huhmann et al. - 2013 - The FAIR control system–System architecture and fi.pdf:application/pdf}
+}
+
+@misc{beck_timing_2015,
+	title = {Timing {Messages} of {GMT} system for {FAIR}},
+	url = {https://www-acc.gsi.de/wiki/Timing/TimingSystemEvent},
+	urldate = {2016-09-26},
+	author = {Beck, Dietrich},
+	year = {2015},
+	file = {TimingSystemEvent < Timing < Belwiki:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\94RXV26G\\TimingSystemEvent.html:text/html}
+}
+
+@inproceedings{arruat_front-end_2007,
+	title = {Front-end software architecture},
+	volume = {7},
+	url = {http://accelconf.web.cern.ch/Accelconf/ica07/PAPERS/WOPA04.PDF},
+	urldate = {2016-09-26},
+	booktitle = {{ICALEPCS}},
+	author = {Arruat, Michel and Fernandez, Leandro and Jackson, Stephen and Locci, Frank and Nougaret, Jean-Luc and Peryt, Maciej and Radeva, Anastasiya and Sobczak, Maciej and Eynden, Marc Vanden},
+	year = {2007},
+	pages = {310},
+	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\D2NN6XIS\\Arruat et al. - 2007 - Front-end software architecture.pdf:application/pdf}
 }
 
 @article{klingbeil_new_2011,
@@ -141,7 +279,6 @@
 
 @article{moritz_butisdevelopment_2006,
 	title = {{BuTiS}–{Development} of a {Bunchphase} {Timing} {System}},
-	volume = {2007},
 	url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.162.1765&rep=rep1&type=pdf},
 	urldate = {2016-08-23},
 	journal = {GSI Scientific Report},
@@ -176,30 +313,37 @@
 	url = {https://cas.web.cern.ch/cas/Denmark-2010/Writeups/Baudrenghien.docx},
 	number = {14},
 	urldate = {2016-09-20},
-	journal = {transition},
 	author = {Baudrenghien, P.},
 	year = {2010},
 	pages = {15},
 	file = {[DOC] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\VUCAN2EN\\Baudrenghien - 2010 - Low-level RF.doc:application/msword}
 }
 
-@article{grieser_beam_2015,
+@phdthesis{grieser_beam_2015,
 	title = {Beam phase feedback in a heavy-ion synchrotron with dual-harmonic cavity system},
 	url = {http://tuprints.ulb.tu-darmstadt.de/4634/},
 	urldate = {2016-09-21},
+	school = {Technical University Darmstadt},
 	author = {Grieser, Jochen Michael},
 	year = {2015},
 	file = {[PDF] tu-darmstadt.de:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\3MG6UJ9P\\Grieser - 2015 - Beam phase feedback in a heavy-ion synchrotron wit.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\Q9C4XFZH\\4634.html:text/html}
 }
 
-@phdthesis{gros_s_bunch-by-bunch_2015,
+@article{gross_bunch-by-bunch_2015,
 	title = {Bunch-by-{Bunch} {Longitudinal} {RF} {Feedback} for {Beam} {Stabilization} at {FAIR}},
 	url = {http://accelconf.web.cern.ch/AccelConf/IPAC2015/papers/mopha021.pdf},
 	urldate = {2016-09-21},
-	school = {these proceedings, IPAC’15, Richmond, USA},
-	author = {Gro{\textbackslash}s s, K. and Hartel, U. and Laier, U. and Lens, D. and Ningel, K. P. and Schäfer, S. and Zipfel, B. and Klingbeil, H.},
+	journal = {In Proc. of IPAC},
+	author = {Gross, K. and Hartel, U. and Laier, U. and Lens, D. and Ningel, K. P. and Schäfer, S. and Zipfel, B. and Klingbeil, H.},
 	year = {2015},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\AP5TAMP7\\Gros s et al. - 2015 - Bunch-by-Bunch Longitudinal RF Feedback for Beam S.pdf:application/pdf}
+}
+
+@techreport{garoby_timing_1984,
+	title = {Timing aspect of bunch transfer between circular machines. {State} of the art in the {PS} complex, {PS}/{RF}},
+	institution = {Note 84-6, 17 December 84},
+	author = {Garoby, R},
+	year = {1984}
 }
 
 @article{bohne_status_1986,
@@ -210,5 +354,3 @@
 	year = {1986},
 	file = {[PDF] inspirehep.net:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\GEEH2VAD\\Böhne et al. - 1986 - Status report on the SISESR project at GSI.pdf:application/pdf}
 }
-}
-\end{filecontents}
